Revert database.yml

--- a/config/database.yml.cloud9.example
+++ b/config/database.yml.cloud9.example
@@ -5,14 +5,17 @@ default: &default
 
 development:
   <<: *default
-  username: 
-  password: 
+  username:
+  password:
   database: mapknitter_dev
 
 production:
-  <<: *default
-  username: root
-  password: 
+  adapter: mysql2
+  encoding: utf8
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: db
+  username: mapknitter
+  password: mapknitter
   database: mapknitter
 
 test:
