--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,18 @@ services:
   - docker
 
 cache:
-  bundler: true
   directories:
-   - public/lib/
+  - $PWD/public/lib/
+  - $PWD/vendor/bundle/
 
 install:
   - cp config/database.yml.example config/database.yml
   - cp config/config.yml.example config/config.yml
   - cp db/schema.rb.example db/schema.rb
   - ./lib/exporter-deps.sh > /dev/null 2>&1
-  - bundle install && yarn install
+  - bundle check || bundle install --path vendor/bundle
+  - bundle info rails
+  - yarn check || yarn install
   - bundle exec rake db:setup || bundle exec rake db:migrate
 
 env:
@@ -48,4 +50,3 @@ branches:
     - main
     - unstable
     - development
-
